# wordfreq

./: .gitignore  .travis.yml  CHANGELOG.md  Jenkinsfile  LICENSE.txt  MANIFEST.in  MIT-LICENSE.txt  NOTICE.md  README.md  README.txt  SUNSET.md  mypy.ini  number-freq-notes.txt  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
notes/: number-freq-notes.txt
scripts/: gen_regex.py  make_chinese_mapping.py  ninja2dot.py  top_n.py
tests/: test.py  test_apostrophes.py  test_at_sign.py  test_build.py  test_chinese.py  test_french.py  test_french_and_related.py  test_general.py  test_japanese.py  test_korean.py  test_math.py  test_numbers.py  test_queries.py  test_serbian.py  test_transliteration.py
wordfreq/: __init__.py  _chinese_mapping.py  build.py  chinese.py  config.py  language_info.py  mecab.py  numbers.py  preprocess.py  query.py  schema.py  tokens.py  transfer.py  transliterate.py  util.py
wordfreq/data/: combining_mark.txt  emoji.txt  jieba_zh.txt  non_punct.txt  twitter_en.msgpack.gz.REMOVED.git-id  twitter_ko.msgpack.gz.REMOVED.git-id
wordfreq/data/mecab-ja-ipadic/: dicrc  sys.dic.REMOVED.git-id  unk.dic
wordfreq/data/mecab-ko-dic/: dicrc  left-id.def  matrix.bin.REMOVED.git-id  model.bin.REMOVED.git-id  pos-id.def  rewrite.def  right-id.def  sys.dic.REMOVED.git-id  unk.dic
wordfreq_builder/: .gitignore  Makefile  README.md  build.png.REMOVED.git-id  rules.ninja  setup.py  wordfreq.cfg
wordfreq_builder/tests/: test_tokenizer.py  test_urls.py
wordfreq_builder/wordfreq_builder/: cmd_combine_lists.py  cmd_count_twitter.py  cmd_count_wikipedia.py  config.py  ninja.py  ninja2dot.py  tokenize.py  tokenizers.py  word_counts.py
wordfreq_builder/wordfreq_builder/cli/: build_deps.py  combine_lists.py  count_tokens.py  count_tokens_langtagged.py  count_twitter.py  counts_to_jieba.py  format_twitter.py  freqs_to_cB.py  freqs_to_dB.py  merge_counts.py  merge_freqs.py  pretokenize_twitter.py  simplify_chinese.py  tokenize_reddit.py  tokenize_twitter.py  tokenize_wikipedia.py
wordfreq_builder/wordfreq_builder/tests/: test_tokenizer.py
wordfreq_data/google/: README.txt  google-books-english.csv.REMOVED.git-id
wordfreq_data/leeds/: README.txt  internet-ar-forms.num  internet-de-forms.num  internet-el-forms.num  internet-en-forms.num  internet-es-forms.num  internet-fr-forms.num  internet-it-forms.num  internet-ja-forms.num  internet-pt-forms.num  internet-ru-forms.num  internet-zh-forms.num  rnc-modern.num.html
wordfreq_data/luminoso/: README.txt  multilingual.csv.REMOVED.git-id  nl-combined-201503.csv.REMOVED.git-id  nl-combined-201504.csv.REMOVED.git-id  twitter-52M.csv.REMOVED.git-id  twitter-stems-2014-nl.csv  twitter-stems-2014.csv.REMOVED.git-id  twitter-surfaces-2014-nl.csv  twitter-surfaces-2014.csv.REMOVED.git-id
wordfreq_data/wikipedia/: stems-nl.csv.REMOVED.git-id  surfaces-nl.csv.REMOVED.git-id
