[tool.poetry]
name = "wordfreq"
version = "3.0.0"
description = "Look up the frequencies of words in many languages, based on many sources of data."
authors = ["Robyn Speer <rspeer@arborelia.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rspeer/wordfreq/"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = ">= 1.0"
langcodes = ">= 3.0"
regex = ">= 2020.04.04"
ftfy = ">= 6.1"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mecab-python3 = "^1.0.4"
jieba = ">= 0.42"
ipadic = "^1.0.0"
mecab-ko-dic = "^1.0.0"
ipython = ">=7"
black = "^22.1.0"
flake8 = "^4.0.1"
types-setuptools = "^57.4.9"

[tool.poetry.extras]
cjk = ["mecab-python3", "ipadic", "mecab-ko-dic", "jieba >= 0.42"]
mecab = ["mecab-python3", "ipadic", "mecab-ko-dic"]
jieba = ["jieba >= 0.42"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
