[tool.poetry]
name = "wordfreq"
version = "3.0.3"
description = "Look up the frequencies of words in many languages, based on many sources of data."
authors = ["Robyn Speer <rspeer@arborelia.net>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rspeer/wordfreq/"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = ">= 1.0"
langcodes = ">= 3.0"
regex = ">= 2021.7.6"
ftfy = ">= 6.1"
mecab-python3 = {version = "^1.0.5", optional = true}
ipadic = {version = "^1.0.0", optional = true}
mecab-ko-dic = {version = "^1.0.0", optional = true}
jieba = {version = ">=0.42", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
mecab-python3 = "^1.0.4"
jieba = ">= 0.42"
ipadic = "^1.0.0"
mecab-ko-dic = "^1.0.0"
ipython = ">=7"
black = "^22.1.0"
flake8 = "^4.0.1"
types-setuptools = "^57.4.9"
mypy = "^0.931"

[tool.poetry.extras]
cjk = ["mecab-python3", "ipadic", "mecab-ko-dic", "jieba"]
mecab = ["mecab-python3", "ipadic", "mecab-ko-dic"]
jieba = ["jieba"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
